tenzir/tests/exec/access/root_field_suggestions.tql
// test: exec
// error: false 
// timeout: 10

// Test root field access "did you mean" suggestions
from {
  src_ip: "192.168.1.1",
  dest_ip: "10.0.0.1", 
  src_port: 80,
  dest_port: 443,
  protocol: "tcp"
}
select (
  // Correct access (baseline)
  correct_src = src_ip,
  correct_dest = dest_ip,
  
  // Root field access with typos - should get suggestions
  src_typo1 = src_i,       // missing 'p' - should suggest src_ip
  src_typo2 = sr_ip,       // missing 'c' - should suggest src_ip  
  src_typo3 = src_pi,      // transposed 'ip' -> 'pi' - should suggest src_ip
  dest_typo1 = dest_i,     // missing 'p' - should suggest dest_ip
  dest_typo2 = dест_ip,    // typo with similar char - should suggest dest_ip
  port_typo1 = src_por,    // missing 't' - should suggest src_port
  port_typo2 = dest_prt,   // missing 'o' - should suggest dest_port
  protocol_typo1 = protcol, // missing 'o' - should suggest protocol
  protocol_typo2 = protocl, // missing 'o' - should suggest protocol
  
  // Very different names - should not get suggestions
  completely_different = xyz123,
  another_bad = qwerty,
  
  // Test that ? suppression still works
  suppressed_root = nonexistent_field?
)